# dotfiles

./: .gitignore  .gitmodules  .stow-global-ignore  Brewfile  README.md  mise.toml
claude/: .stow-local-ignore
claude/.claude/: CLAUDE.md  settings.json  statusline.sh
docs/superpowers/plans/: 2026-03-17-dotfiles-setup.md  2026-04-28-pi-context7-mcp.md
docs/superpowers/specs/: 2026-03-17-dotfiles-design.md  2026-04-28-pi-context7-mcp-design.md
gh-dash/.config/gh-dash/: config.yml
ghostty/.config/ghostty/: config
git/: .gitconfig
git/.config/git/: ignore
lazygit/.config/lazygit/: config.yml
marimo/.config/marimo/: marimo.toml
mise/: .default-python-packages
mise/.config/mise/: config.toml
pi/.pi/agent/: AGENTS.md  env.zsh  mcp.json  settings.json
sofia/: .stow-local-ignore
sofia/.claude/hooks/: _sofia-context.sh  sofia-pre-compact.sh  sofia-session-end.sh  sofia-session-start.sh
sofia/.config/sofia/: config.toml
sofia/.local/share/sofia/src/: .gitignore  pyproject.toml
sofia/.local/share/sofia/src/sofia/: chunker.py  cli.py  config.py  db.py  embedder.py  indexer.py  search.py
sofia/.local/share/sofia/src/sofia/hooks/: session_start.py
sofia/.local/share/sofia/src/tests/: conftest.py  test_chunker.py  test_cli.py  test_config.py  test_db.py  test_embedder.py  test_hooks_bash.py  test_indexer.py  test_search.py  test_session_start.py
sofia/cloud/: README.md
sofia/docs/plans/: 2026-04-28-sofia-second-brain-v1.md  2026-05-01-sofia-cloud-phase-1-2-implementation.md  2026-05-01-sofia-cloud-roadmap.md  (+2 more)
zsh/: .zprofile  .zshrc
(+68 files in other folders)
