[project]
name = "sofia"
version = "0.1.0"
description = "SOFIA second brain — local hybrid search + Claude Code hooks for Obsidian"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "python-frontmatter>=1.0",
  "fastembed>=0.3",
  "sqlite-vec>=0.1.6",
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
sofia = "sofia.cli:app"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sofia"]
